--- a/index.html
+++ b/index.html
@@ -734,14 +734,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio11.png" alt="Portfolio">
+                                        <img src="images/portfolio11.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://automart.com.co/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio11.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio11.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -753,14 +753,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio22.png" alt="Portfolio">
+                                        <img src="images/portfolio22.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://admysis.com/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio22.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio22.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -771,14 +771,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio66.png" alt="Portfolio">
+                                        <img src="images/portfolio66.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://tutonerya.com/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio66.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio66.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -790,14 +790,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio77.png" alt="Portfolio">
+                                        <img src="images/portfolio77.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://www.vcfauditores.com/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio77.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio77.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -832,14 +832,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio33.png" alt="Portfolio">
+                                        <img src="images/portfolio33.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://servipits.com/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio33.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio33.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -851,14 +851,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio44.png" alt="Portfolio">
+                                        <img src="images/portfolio44.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://lubricautos.com/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio44.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio44.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -870,14 +870,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio55.png" alt="Portfolio">
+                                        <img src="images/portfolio55.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://www.carlosvilllotasantacruz.com/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio55.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio55.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
