--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="header_top">
                     <div class="toggle_icon hidden-xs"><span class="lnr lnr-menu"></span></div>
                     <div class="head_img_wrap">
-                        <img src="images/yo55.jpg" alt="Images">
+                        <img src="images/yo55.JPG" alt="Images">
                     </div>
                     <p class="name">Alex Niño</p>
                 </div>
