--- a/index.html
+++ b/index.html
@@ -808,14 +808,14 @@
                             <div class="single_portfolio_item">
                                 <figure>
                                     <div class="portfolio_img">
-                                        <img src="images/portfolio88.png" alt="Portfolio">
+                                        <img src="images/portfolio88.PNG" alt="Portfolio">
                                     </div>
 
                                     <figcaption>
                                         <p>Web development project</p>
                                         <div class="classless">
                                             <div class="icon"><a href="http://cpapers.com.co/" target="blank"><span class="fa fa-link"></span></a></div>
-                                            <a class="icon venobox" href="images/portfolio88.png"><span class="fa fa-search"></span></a>
+                                            <a class="icon venobox" href="images/portfolio88.PNG"><span class="fa fa-search"></span></a>
                                         </div>
                                     </figcaption>
                                 </figure>
